--- a/themes/inhabitent/package.json
+++ b/themes/inhabitent/package.json
@@ -23,7 +23,7 @@
     "type": "git",
     "url": "git+https://github.com/redacademy/redstarter.git"
   },
-  "author": "mandiwise",
+  "author": "amelianpm",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/redacademy/redstarter/issues"
