--- a/.gitignore
+++ b/.gitignore
@@ -5,15 +5,19 @@
 !themes/
 !uploads/
 !README.md
+
 # Ignore everything in "plugins" except certain plugins. #
 plugins/*
-!plugins/inhabitent-functionality/
+!plugins/inhabitent/
 !plugins/business-hours-widget/
+
 # Ignore everything in "themes" except the active theme. #
 themes/*
 !themes/inhabitent/
+
 # Ignore packages #
 themes/inhabitent/node_modules/
+
 # Ignore OS files #
 .DS_Store
 .DS_Store?
@@ -23,6 +27,7 @@ themes/inhabitent/node_modules/
 ehthumbs.db
 *[Tt]humbs.db
 *.Trashes
+
 # Ignore logs and databases #
 *.log
 *.sql
