--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,22 @@
 # Ignore everything in "wp-content" except these directories. #
 /*
 !.gitignore
-
+!plugins/
 !themes/
 !uploads/
 !README.md
 
 # Ignore everything in "plugins" except certain plugins. #
-
-
+plugins/*
+!plugins/inhabitent-functionality/
+!plugins/business-hours-widget/
 
 # Ignore everything in "themes" except the active theme. #
 themes/*
-!themes/inhabitent/
+!themes/Inhabitent/
 
 # Ignore packages #
-themes/inhabitent/node_modules/
+themes/Inhabitent/node_modules/
 
 # Ignore OS files #
 .DS_Store
@@ -26,7 +27,6 @@ themes/inhabitent/node_modules/
 ehthumbs.db
 *[Tt]humbs.db
 *.Trashes
-
 # Ignore logs and databases #
 *.log
 *.sql
